--- a/1_Time_Series_W1_Data_Prep.ipynb
+++ b/1_Time_Series_W1_Data_Prep.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOx92N81OcIvJJ+4M5MPWBA",
+      "authorship_tag": "ABX9TyMIqTBlywR6Jc/Uvj79s5HB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,8 +23,17 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/vikramwakhlu/Time_Series_Modelling/blob/main/data_prep.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/vikramwakhlu/Time_Series_Modelling/blob/main/1_Time_Series_W1_Data_Prep.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Initial Data Load"
+      ],
+      "metadata": {
+        "id": "o9iWn2NVkSHq"
+      }
     },
     {
       "cell_type": "code",
@@ -70,10 +79,10 @@
         }
       ],
       "source": [
-        "# STEP 0: Install gdown\n",
+        "# Install gdown\n",
         "!pip install -U gdown\n",
         "\n",
-        "# STEP 1: Imports and helper functions\n",
+        "# Imports and helper functions\n",
         "import pandas as pd\n",
         "import requests\n",
         "import io\n",
@@ -89,7 +98,7 @@
         "    response.raise_for_status()  # Raises an error if the request fails\n",
         "    return pd.read_csv(io.StringIO(response.text))\n",
         "\n",
-        "# STEP 2: Dictionary of file IDs\n",
+        "# Dictionary of file IDs\n",
         "file_ids = {\n",
         "    \"holiday_events\": \"1RMjSuqHXHTwAw_PGD5XVjhA3agaAGHDH\",\n",
         "    \"items\": \"1ogMRixVhNY6XOJtIRtkRllyOyzw1nqya\",\n",
@@ -99,7 +108,7 @@
         "    \"transactions\": \"1PW5LnAEAiL43fI5CRDn_h6pgDG5rtBW_\"\n",
         "}\n",
         "\n",
-        "# STEP 3: Read all files but train.csv (already done in previous runs, keeping for context)\n",
+        "# Read all files but train.csv (already done in previous runs, keeping for context)\n",
         "# Load each CSV using the helper functions\n",
         "df_holiday_events = load_csv_from_url(make_drive_url(file_ids[\"holiday_events\"]))\n",
         "df_items          = load_csv_from_url(make_drive_url(file_ids[\"items\"]))\n",
@@ -107,17 +116,17 @@
         "df_stores         = load_csv_from_url(make_drive_url(file_ids[\"stores\"]))\n",
         "df_transactions   = load_csv_from_url(make_drive_url(file_ids[\"transactions\"]))\n",
         "\n",
-        "# STEP 4: Download the train.csv file using gdown\n",
+        "#Download the train.csv file using gdown\n",
         "train_url = make_drive_url(file_ids[\"train\"])\n",
         "gdown.download(train_url, \"train.csv\", quiet=False)\n",
         "\n",
-        "# STEP 5: Load stores and get Guayas store IDs\n",
+        "#Load stores and get Guayas store IDs\n",
         "stores_url = make_drive_url(file_ids[\"stores\"])\n",
         "df_stores = pd.read_csv(io.StringIO(requests.get(stores_url).text))\n",
         "store_ids = df_stores[df_stores['state'] == 'Guayas']['store_nbr'].unique()\n",
         "\n",
         "\n",
-        "# STEP 6: Read train.csv in chunks and filter for Guayas region\n",
+        "#Read train.csv in chunks and filter for Guayas region\n",
         "chunk_size = 10**6\n",
         "filtered_chunks = []\n",
         "\n",
@@ -126,19 +135,18 @@
         "    filtered_chunks.append(chunk_filtered)\n",
         "    del chunk\n",
         "\n",
-        "# STEP 7: Combine and sample\n",
+        "#Combine and sample\n",
         "df_train = pd.concat(filtered_chunks, ignore_index=True).sample(n=2_000_000).reset_index(drop=True)\n",
         "\n",
         "# Ensure date column is datetime\n",
         "df_train['date'] = pd.to_datetime(df_train['date'])\n",
         "\n",
-        "# STEP 8: Identify the top-3 families by item count\n",
+        "#Identify the top-3 families by item count\n",
         "items_per_family = df_items['family'].value_counts().reset_index()\n",
         "items_per_family.columns = ['Family', 'Item Count']\n",
         "top_3_families = items_per_family.head(3)  # here is where we get the top-3 families\n",
         "\n",
         "# Next, we filter our the dataset\n",
-        "# Assuming that train.csv file was read into a variable called df_train\n",
         "# Get the list of item_nbrs that belong to those families\n",
         "item_ids = df_items[df_items['family'].isin(top_3_families['Family'].unique())]['item_nbr'].unique()\n",
         "\n",
@@ -152,6 +160,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Confirming top 3 families\n",
         "top_3_families"
       ],
       "metadata": {
@@ -523,7 +532,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Reload later\n",
+        "# Reload\n",
         "import pandas as pd\n",
         "df_train = pd.read_parquet(\"/content/drive/MyDrive/df_train.parquet\")"
       ],
@@ -536,7 +545,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Loads first 5 rows\n",
         "df_train.head(5)"
       ],
       "metadata": {
@@ -861,15 +869,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#EDA\n",
-        "\n",
-        "###Step 1: Checking for Missing Data\n",
-        "###Step 2: Handling Outliers\n",
-        "###Step 3: Fill missing dates with zero sales\n",
-        "###Step 4: Feature Engineering: turning a date into useful signals\n",
-        "###Step 5: Visualizing Time-Series Data\n",
-        "###Step 6: Examining the Impact of Holidays\n",
-        "###Step 7: Analyzing Perishable Items"
+        "#EDA\n"
       ],
       "metadata": {
         "id": "M3SSz1BZegH9"
@@ -878,7 +878,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Checking for Missing Data"
+        "###Checking for Missing Data"
       ],
       "metadata": {
         "id": "a3odmiHjfjUc"
@@ -1256,7 +1256,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Handling Outliers"
+        "###Handling Outliers"
       ],
       "metadata": {
         "id": "ecENy5kti7oq"
@@ -2362,7 +2362,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ensuring the dates are sequential"
+        "##Ensuring the dates are sequential"
       ],
       "metadata": {
         "id": "6xQI3BjVaEL9"
@@ -2739,7 +2739,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Feature Engineering"
+        "#Feature Engineering"
       ],
       "metadata": {
         "id": "iIwdAXlVdmIA"
@@ -3160,6 +3160,15 @@
           "execution_count": 18
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Visualizing the data"
+      ],
+      "metadata": {
+        "id": "_9yrOuG9mcPw"
+      }
     },
     {
       "cell_type": "code",
