--- a/2_Time_Series_W2_Analysis.ipynb
+++ b/2_Time_Series_W2_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMHY5XZ6yS7KKskf/OM6akv",
+      "authorship_tag": "ABX9TyOskJs1wBUaNUhMX2UzSz/v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,8 +24,17 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/vikramwakhlu/Time_Series_Modelling/blob/main/Time_Series_W2_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/vikramwakhlu/Time_Series_Modelling/blob/main/2_Time_Series_W2_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Initial Library and data load"
+      ],
+      "metadata": {
+        "id": "5VCMlbZWm7A7"
+      }
     },
     {
       "cell_type": "code",
@@ -38,7 +47,13 @@
         "import requests\n",
         "import io\n",
         "import gdown\n",
-        "import matplotlib.pyplot as plt\n"
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "!pip -q install xgboost\n",
+        "from xgboost import XGBRegressor\n",
+        "\n",
+        "import numpy as np\n",
+        "from sklearn.metrics import mean_absolute_error, mean_squared_error\n"
       ],
       "metadata": {
         "colab": {
@@ -178,14 +193,22 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
-        "import pandas as pd\n",
         "df_train = pd.read_csv(\"/content/drive/MyDrive/time series modelling/guayas_prepared.csv\")\n"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Clamp to Jan 1 – Mar 31, 2014"
+      ],
+      "metadata": {
+        "id": "rnxFAm55nRRa"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Step 2: Clamp to Jan 1 – Mar 31, 2014\n",
+        "\n",
         "df_train['date'] = pd.to_datetime(df_train['date'])\n",
         "df_window = df_train[\n",
         "    (df_train['date'] >= \"2014-01-01\") &\n",
@@ -197,41 +220,6 @@
       },
       "execution_count": 90,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(df_window.head())"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qYdwmF7EDTvo",
-        "outputId": "cf442efb-0418-4c8d-f1df-bd0fc60156a1"
-      },
-      "execution_count": 91,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "          date  id  store_nbr  item_nbr  unit_sales onpromotion  year  month  \\\n",
-            "339 2014-01-01   0         24     96995         0.0           0  2014      1   \n",
-            "340 2014-01-02   0         24     96995         0.0           0  2014      1   \n",
-            "341 2014-01-03   0         24     96995         0.0           0  2014      1   \n",
-            "342 2014-01-04   0         24     96995         0.0           0  2014      1   \n",
-            "343 2014-01-05   0         24     96995         0.0           0  2014      1   \n",
-            "\n",
-            "     day  day_of_week  unit_sales_7d_avg  \n",
-            "339    1            2           1.142857  \n",
-            "340    2            3           1.142857  \n",
-            "341    3            4           1.142857  \n",
-            "342    4            5           0.714286  \n",
-            "343    5            6           0.714286  \n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -282,7 +270,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 1) Daily aggregation (sum across items/stores/families)\n",
+        "# Ensuring daily aggregation (sum across items/stores/families)\n",
         "daily = (\n",
         "    df_window\n",
         "    .groupby('date', as_index=False)['unit_sales']\n",
@@ -367,10 +355,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Features: Lag"
+        "# Features Engineering for XG Boost"
       ],
       "metadata": {
         "id": "LK8QJxa_qWeq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Lags"
+      ],
+      "metadata": {
+        "id": "WBKir1YrnpPs"
       }
     },
     {
@@ -380,7 +377,6 @@
         "daily['lag_1'] = daily['unit_sales'].shift(1)\n",
         "daily['lag_7'] = daily['unit_sales'].shift(7)\n",
         "daily['lag_14'] = daily['unit_sales'].shift(14)\n",
-        "daily['lag_28'] = daily['unit_sales'].shift(28)\n",
         "daily['lag_30'] = daily['unit_sales'].shift(30)\n",
         "\n",
         "# Drop any rows with NaN values after creating lag features\n",
@@ -391,6 +387,15 @@
       },
       "execution_count": 96,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Rolling Means"
+      ],
+      "metadata": {
+        "id": "upNOjKK7nrHr"
+      }
     },
     {
       "cell_type": "code",
@@ -431,6 +436,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Date based features"
+      ],
+      "metadata": {
+        "id": "E7cf2w8Vnxl6"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Add date-based features\n",
@@ -455,9 +469,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Differentiate Feature and Target columns"
+      ],
+      "metadata": {
+        "id": "pVHb4AApn5gA"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Choose from what we already have\n",
         "feature_cols = [\n",
         "    'lag_1','lag_7','lag_14','lag_30',\n",
         "    'rolling_mean_7','rolling_std_7',\n",
@@ -472,9 +494,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Build Modeling Frame"
+      ],
+      "metadata": {
+        "id": "EryoEKJ5oXel"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Build modeling frame and drop NaNs coming from lags/rolling\n",
         "df_ml = daily[['date', target_col] + feature_cols].copy()\n",
         "df_ml = df_ml.dropna(subset=[target_col] + feature_cols).reset_index(drop=True)\n",
         "\n",
@@ -861,12 +891,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Chronological split - Train/Test: Train = Jan–Feb 2014, Test = Mar 2014"
+      ],
+      "metadata": {
+        "id": "VS35RO0LoFcI"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Chronological split: Train = Jan–Feb 2014, Test = Mar 2014\n",
         "train_mask = (df_ml['date'] >= pd.Timestamp('2014-01-01')) & (df_ml['date'] <= pd.Timestamp('2014-02-28'))\n",
-        "test_mask  = (df_ml['date'] >= pd.Timestamp('2014-03-01')) & (df_ml['date'] <= pd.Timestamp('2014-03-31'))\n",
-        "\n"
+        "test_mask  = (df_ml['date'] >= pd.Timestamp('2014-03-01')) & (df_ml['date'] <= pd.Timestamp('2014-03-31'))"
       ],
       "metadata": {
         "id": "OJd2fmNDyJUb"
@@ -929,12 +966,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Fit XGBoost"
+      ],
+      "metadata": {
+        "id": "zN-Rw9i5ofg7"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Fit XGBoost\n",
-        "!pip -q install xgboost\n",
-        "from xgboost import XGBRegressor\n",
-        "\n",
         "xgb = XGBRegressor(\n",
         "    n_estimators=900,\n",
         "    learning_rate=0.05,\n",
@@ -1418,12 +1460,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Predict & evaluate"
+      ],
+      "metadata": {
+        "id": "3-m_6yanpFV-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Predict & evaluate\n",
-        "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
-        "import numpy as np\n",
-        "\n",
         "y_pred = xgb.predict(X_test)\n",
         "\n",
         "mae = mean_absolute_error(y_test, y_pred)\n",
@@ -1458,88 +1505,7 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "252181a2",
-        "outputId": "c84306d5-f85e-4ccc-be55-f23e5d5c1798"
-      },
       "source": [
-        "print(\"Train mask head:\\n\", train_mask.head())\n",
-        "print(\"\\nTest mask head:\\n\", test_mask.head())\n",
-        "print(\"\\ndf_ml head:\\n\", df_ml.head())\n",
-        "print(\"\\ndf_ml info:\\n\", df_ml.info())"
-      ],
-      "execution_count": 111,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Train mask head:\n",
-            " 0    True\n",
-            "1    True\n",
-            "2    True\n",
-            "3    True\n",
-            "4    True\n",
-            "Name: date, dtype: bool\n",
-            "\n",
-            "Test mask head:\n",
-            " 0    False\n",
-            "1    False\n",
-            "2    False\n",
-            "3    False\n",
-            "4    False\n",
-            "Name: date, dtype: bool\n",
-            "\n",
-            "df_ml head:\n",
-            "         date  unit_sales   lag_1   lag_7  lag_14    lag_30  rolling_mean_7  \\\n",
-            "0 2014-02-07      3190.0  3063.0  4117.0  3916.0  4256.496     4222.857143   \n",
-            "1 2014-02-08      3937.0  3190.0  5863.0  4921.0  4680.000     4090.428571   \n",
-            "2 2014-02-09      4640.0  3937.0  5840.0  6041.0  3852.694     3815.285714   \n",
-            "3 2014-02-10      3017.0  4640.0  3777.0  3566.0  5318.000     3643.857143   \n",
-            "4 2014-02-11      2885.0  3017.0  3650.0  3742.0  5814.124     3535.285714   \n",
-            "\n",
-            "   rolling_std_7  day_of_week  month  is_weekend  \n",
-            "0    1164.409640            4      2           0  \n",
-            "1    1229.357943            5      2           1  \n",
-            "2     950.397411            6      2           1  \n",
-            "3     546.885554            0      2           0  \n",
-            "4     589.803841            1      2           0  \n",
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 53 entries, 0 to 52\n",
-            "Data columns (total 11 columns):\n",
-            " #   Column          Non-Null Count  Dtype         \n",
-            "---  ------          --------------  -----         \n",
-            " 0   date            53 non-null     datetime64[ns]\n",
-            " 1   unit_sales      53 non-null     float64       \n",
-            " 2   lag_1           53 non-null     float64       \n",
-            " 3   lag_7           53 non-null     float64       \n",
-            " 4   lag_14          53 non-null     float64       \n",
-            " 5   lag_30          53 non-null     float64       \n",
-            " 6   rolling_mean_7  53 non-null     float64       \n",
-            " 7   rolling_std_7   53 non-null     float64       \n",
-            " 8   day_of_week     53 non-null     int32         \n",
-            " 9   month           53 non-null     int32         \n",
-            " 10  is_weekend      53 non-null     int64         \n",
-            "dtypes: datetime64[ns](1), float64(7), int32(2), int64(1)\n",
-            "memory usage: 4.3 KB\n",
-            "\n",
-            "df_ml info:\n",
-            " None\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
-        "\n",
         "# --- Metrics ---\n",
         "mae = mean_absolute_error(y_test, y_pred)\n",
         "try:\n",
@@ -1557,7 +1523,7 @@
         "eval_df['resid']  = eval_df['pred'] - eval_df['actual']   # >0 = over-forecast, <0 = under-forecast\n",
         "eval_df.head()\n",
         "\n",
-        "# --- 1) Time plot: Actual vs Predicted ---\n",
+        "# --- Time plot: Actual vs Predicted ---\n",
         "plt.figure(figsize=(12,5))\n",
         "plt.plot(eval_df['date'], eval_df['actual'], label='Actual', linewidth=2)\n",
         "plt.plot(eval_df['date'], eval_df['pred'],   label='Predicted', linestyle='--')\n",
@@ -1567,7 +1533,7 @@
         "plt.tight_layout()\n",
         "plt.show()\n",
         "\n",
-        "# --- 2) Scatter: Predicted vs Actual (y=x line) ---\n",
+        "# --- Scatter: Predicted vs Actual (y=x line) ---\n",
         "plt.figure(figsize=(6,6))\n",
         "plt.scatter(eval_df['actual'], eval_df['pred'], alpha=0.75)\n",
         "lims = [min(eval_df['actual'].min(), eval_df['pred'].min()),\n",
@@ -1578,7 +1544,7 @@
         "plt.tight_layout()\n",
         "plt.show()\n",
         "\n",
-        "# --- 3) Residuals by day: over/under-forecast ---\n",
+        "# --- Residuals by day: over/under-forecast ---\n",
         "plt.figure(figsize=(12,4))\n",
         "colors = np.where(eval_df['resid'] >= 0, 'tab:red', 'tab:green')  # red = over, green = under\n",
         "plt.bar(eval_df['date'], eval_df['resid'], width=0.8, align='center', color=colors)\n",
